--- a/app/src/main/res/drawable/drawing_back.xml
+++ b/app/src/main/res/drawable/drawing_back.xml
@@ -5,19 +5,19 @@
     android:viewportWidth="94.51"
     android:viewportHeight="94.027">
   <path
-      android:pathData="m39.984,1.151c-1.929,0.039 -3.825,0.383 -5.632,0.883 -3.04,0.362 -3.276,1.353 -5.448,3.494 -0.888,1.249 -5.078,1.233 -6.376,1.502 -3.061,0.52 -6.219,1.014 -8.904,2.69 -3.231,1.773 -5.992,4.564 -7.39,8.001 -1.108,3.284 -1.953,6.789 -1.323,10.263 0.247,1.806 -0.112,3.671 0.432,5.451 -0.036,0.558 0.774,1.196 0.037,1.556 -2.624,2.161 -2.92,5.85 -3.673,8.933 -0.618,3.471 -1.518,7.707 0.886,10.722 1.59,1.386 3.566,2.348 5.479,3.223 -0.779,-0.441 -0.999,-0.602 -0.147,-0.104 2.097,1.086 4.049,2.6 6.271,3.376 2.274,-0.741 4.162,-4.847 5.16,-6.828 1.489,8.573 -0.346,-3.568 0.19,0.816 0.529,2.449 1.07,5.214 1.698,7.64 0.49,1.542 1.518,3.042 0.931,4.729 -1.086,5.382 -0.741,11.26 1.838,16.179 2.065,4.001 6.539,5.915 10.192,8.092 3.257,1.669 7.05,1.03 10.565,1.256 5.644,-0.232 10.514,0.628 16.102,-0.356 2.656,-1.195 5.203,-4.015 7.28,-5.96 1.58,-1.98 3.206,-3.488 4.105,-5.931 0.165,-2.001 0.163,-3.983 -0.099,-5.963 -0.656,-3.81 -1.595,-8.068 0.485,-11.614 1.097,-2.374 2.574,-4.603 3.188,-7.172 0.916,2.959 4.251,4.104 6.733,5.358 2.609,0.689 4.351,-1.955 5.943,-3.538 1.378,-1.838 3.483,-3.072 4.69,-5.014 0.693,-2.42 0.068,-5.016 -0.46,-7.412 -1.183,-3.144 -2.564,-6.218 -4.404,-9.033 -0.723,-1.393 0.38,-2.961 0.382,-4.425 0.7,-3.983 0.992,-8.189 -0.415,-12.058 -0.695,-3.939 -3.838,-6.813 -7.285,-8.498C78.033,9.269 74.557,8.088 70.971,7.507 68.041,6.681 65.69,5.418 63.121,3.655 56.593,-0.006 48.053,1.252 40.813,1.153c-0.277,-0.007 6.739,-0.008 6.464,-0.002z"
+      android:pathData="m34.292,1.552c-3.04,0.362 -3.216,1.835 -5.388,3.976 -0.888,1.249 -5.078,1.233 -6.376,1.502 -3.061,0.52 -6.219,1.014 -8.904,2.69 -3.231,1.773 -5.992,4.564 -7.39,8.001 -1.108,3.284 -1.953,6.789 -1.323,10.263 0.247,1.806 -0.112,3.671 0.432,5.451 -0.036,0.558 0.774,1.196 0.037,1.556 -2.624,2.161 -2.92,5.85 -3.673,8.933 -0.618,3.471 -1.518,7.707 0.886,10.722 2.335,1.872 5.181,3.031 5.332,3.119 2.097,1.086 4.049,2.6 6.271,3.376 2.274,-0.741 4.162,-4.847 5.16,-6.828 1.489,8.573 -0.346,-3.568 0.19,0.816 0.529,2.449 1.07,5.214 1.698,7.64 0.49,1.542 1.518,3.042 0.931,4.729 -1.086,5.382 -0.741,11.26 1.838,16.179 2.065,4.001 10.208,8.147 12.22,8.802 1.098,0.716 23.225,0.716 24.638,0.19 2.656,-1.195 5.203,-4.015 7.28,-5.96 1.58,-1.98 3.206,-3.488 4.105,-5.931 0.165,-2.001 0.163,-3.983 -0.099,-5.963 -0.656,-3.81 -1.595,-8.068 0.485,-11.614 1.097,-2.374 2.574,-4.603 3.188,-7.172 0.916,2.959 4.251,4.104 6.733,5.358 2.609,0.689 4.351,-1.955 5.943,-3.538 1.378,-1.838 3.483,-3.072 4.69,-5.014 0.693,-2.42 0.068,-5.016 -0.46,-7.412 -1.183,-3.144 -2.564,-6.218 -4.404,-9.033 -0.723,-1.393 0.38,-2.961 0.382,-4.425 0.7,-3.983 0.992,-8.189 -0.415,-12.058 -0.695,-3.939 -3.838,-6.813 -7.285,-8.498C78.033,9.269 74.557,8.088 70.971,7.507 68.041,6.681 66.76,3.972 64.191,2.209 62.984,1.001 50.644,1.569 34.292,1.552Z"
       android:strokeWidth="2.6"
       android:fillColor="#00000000"
       android:strokeColor="#000000"/>
   <path
-      android:pathData="m75.265,49.46c0,0 -16.379,-3.15 -20.402,-12.174 -4.023,-9.024 -3.534,-26.004 -3.534,-26.004"
+      android:pathData="m76.049,49.46c0,0 -16.379,-3.15 -20.402,-12.174C51.625,28.262 52.114,11.282 52.114,11.282"
       android:strokeWidth="1.33285"
       android:fillColor="#00000000"
       android:fillAlpha="0.987234"
       android:strokeLineCap="round">
     <aapt:attr name="android:strokeColor">
       <gradient 
-          android:centerX="63.297"
+          android:centerX="64.081"
           android:centerY="30.371"
           android:gradientRadius="15.957"
           android:type="radial">
@@ -27,15 +27,15 @@
     </aapt:attr>
   </path>
   <path
-      android:pathData="m21.167,49.467c0,0 16.379,-3.15 20.402,-12.174 4.023,-9.024 3.534,-26.004 3.534,-26.004"
+      android:pathData="m20.362,49.46c0,0 16.379,-3.15 20.402,-12.174 4.023,-9.024 3.534,-26.004 3.534,-26.004"
       android:strokeWidth="1.33285"
       android:fillColor="#00000000"
       android:fillAlpha="0.987234"
       android:strokeLineCap="round">
     <aapt:attr name="android:strokeColor">
       <gradient 
-          android:centerX="33.134"
-          android:centerY="30.378"
+          android:centerX="32.329"
+          android:centerY="30.371"
           android:gradientRadius="15.957"
           android:type="radial">
         <item android:offset="0.987" android:color="#FF000000"/>
@@ -44,44 +44,20 @@
     </aapt:attr>
   </path>
   <path
-      android:pathData="m47.289,63.065 l-0.072,29.92"
-      android:strokeLineJoin="bevel"
-      android:strokeWidth="1.07117"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
-      android:fillAlpha="0.987234"
-      android:strokeLineCap="square"/>
-  <path
-      android:pathData="m46.466,92.83c0.34,-0.071 0.923,-0.194 1.576,-0.331 -0.019,-3.56 -0.078,-8.283 -0.159,-13.493 -0.079,-5.098 -0.178,-10.561 -0.275,-15.613C47.409,53.084 47.231,45.111 47.231,45.111c0,0 -0.182,9.147 -0.346,18.422 -0.098,5.558 -0.187,10.923 -0.258,15.724 -0.091,6.124 -0.14,10.505 -0.161,13.573zM46.466,92.83c0.021,-3.068 0.07,-7.45 0.161,-13.573 0.071,-4.8 0.16,-10.166 0.258,-15.724 0.164,-9.275 0.346,-18.422 0.346,-18.422 0,0 0.178,7.973 0.377,18.281 0.097,5.052 0.196,10.515 0.275,15.613 0.081,5.21 0.14,9.934 0.159,13.493 -0.652,0.137 -1.236,0.26 -1.576,0.331z"
+      android:pathData="m47.418,92.963c0.34,-0.071 0.923,-0.194 1.576,-0.331 -0.019,-3.56 -0.078,-8.283 -0.159,-13.493 -0.079,-5.098 -0.178,-10.561 -0.275,-15.613 -0.198,-10.308 -0.377,-18.281 -0.377,-18.281 0,0 -0.182,9.147 -0.346,18.422 -0.098,5.558 -0.187,10.923 -0.258,15.724 -0.091,6.124 -0.14,10.505 -0.161,13.573zM47.418,92.963c0.021,-3.068 0.07,-7.45 0.161,-13.573 0.071,-4.8 0.16,-10.166 0.258,-15.724 0.164,-9.275 0.346,-18.422 0.346,-18.422 0,0 0.178,7.973 0.377,18.281 0.097,5.052 0.196,10.515 0.275,15.613 0.081,5.21 0.14,9.934 0.159,13.493 -0.652,0.137 -1.236,0.26 -1.576,0.331z"
       android:strokeLineJoin="bevel"
       android:strokeWidth="0.748806"
       android:fillColor="#000000"
       android:strokeColor="#000000"
-      android:fillType="evenOdd"
+      android:fillType="nonZero"
       android:fillAlpha="0.987234"
       android:strokeLineCap="square"/>
-<!--  <path-->
-<!--      android:pathData="m46.927,87.513c0.039,-2.268 0.104,-7.549 0.144,-11.736 0.125,-13.164 0.259,-10.651 0.467,8.737l0.077,7.122l-0.38,0 -0.38,0z"-->
-<!--      android:strokeLineJoin="bevel"-->
-<!--      android:strokeWidth="0.436"-->
-<!--      android:fillColor="#000000"-->
-<!--      android:strokeColor="#000000"-->
-<!--      android:fillAlpha="0.987234"-->
-<!--      android:strokeLineCap="square"/>-->
-<!--  <path-->
-<!--      android:pathData="m47.243,67.36 l-0.099,-0.01 0.002,-0.387c0.006,-1.137 0.08,-4.701 0.099,-4.72 0.012,-0.012 0.022,0.245 0.023,0.571 0.001,0.326 0.02,1.484 0.041,2.573 0.022,1.09 0.038,1.982 0.036,1.982 -0.002,0 -0.048,-0.004 -0.102,-0.01z"-->
-<!--      android:strokeLineJoin="bevel"-->
-<!--      android:strokeWidth="0.115"-->
-<!--      android:fillColor="#000000"-->
-<!--      android:strokeColor="#000000"-->
-<!--      android:fillAlpha="0.987234"-->
-<!--      android:strokeLineCap="square"/>-->
-<!--  <path-->
-<!--      android:pathData="m47.244,63.62c-0.018,-0.041 -0.045,-0.078 -0.055,-0.122 -0.043,-0.19 0.007,-0.419 0.03,-0.61 0.028,-0.222 0.074,-0.449 0.091,-0.671 0.006,-0.081 -0.007,-0.163 0,-0.244 0.004,-0.042 0.025,-0.08 0.03,-0.122 0.013,-0.107 0.029,-0.556 0,-0.671 -0.014,-0.056 -0.045,-0.105 -0.061,-0.152 -0.01,-0.029 0.015,-0.093 0,-0.122 -0.006,-0.013 -0.024,-0.018 -0.03,-0.031 -0.009,-0.018 0.014,-0.077 0,-0.091 -0.007,-0.007 -0.023,0.007 -0.03,0 -0.015,-0.015 0.015,-0.076 0,-0.091 -0.007,-0.007 -0.023,0.007 -0.03,0 -0.018,-0.018 0.097,-0.499 0.122,-0.549 0.006,-0.013 0.03,-0.016 0.03,-0.031 0,-0.02 -0.047,0.014 -0.061,0 -0.007,-0.007 0.007,-0.023 0,-0.031 -0.001,-0.001 -0.081,-0.02 -0.091,-0.031 -0.075,-0.075 0.193,-0.091 0.214,-0.091"-->
-<!--      android:strokeLineJoin="bevel"-->
-<!--      android:strokeWidth="1"-->
-<!--      android:fillColor="#000000"-->
-<!--      android:strokeColor="#000000"-->
-<!--      android:fillAlpha="0.987234"-->
-<!--      android:strokeLineCap="square"/>-->
+  <path
+      android:pathData="m47.91,88.336c0.038,-2.698 0.1,-8.981 0.138,-13.961 0.12,-15.661 0.249,-12.671 0.449,10.394l0.074,8.473h-0.365,-0.365z"
+      android:strokeLineJoin="bevel"
+      android:strokeWidth="0.46601"
+      android:fillColor="#000000"
+      android:strokeColor="#000000"
+      android:fillAlpha="0.987234"
+      android:strokeLineCap="square"/>
 </vector>
